--- a/templates/home/register.html.twig
+++ b/templates/home/register.html.twig
@@ -16,14 +16,20 @@
     </section>  
 
 
-    <section id="postal-banner" class="section postal-banner">
-        <div class="container">
+    <div class="postal-bg-register">
+    <section class="section is-medium">
+        <div class="container postal-header-banner">
 
-            <div class="title">Welcome to Courier.PO!</div>
-            <div class="subtitle">Fill out the form below to create a free account and get started!<br/><small></small></div>
+            <div class="title">Create Account</div>
+            <div class="subtitle">
+                Create an account with Courier.PO
+                <br>
+                <small>With an account, you'll be able to manage all your packages and invoices! and more.</small>
+            </div>
+
         </div>
-
     </section>
+    </div>
 
     <section class="section is-small">
         <div class="container">
