--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -25,5 +25,66 @@
 
     </section>
 
+    <section class="section">
+        <div class="container">
+            <div class="tile is-ancestor">
+                <div class="tile is-7 is-vertical is-parent">
+                    <div class="tile is-child postal-idea postal-idea-message">
+                        <div class="title">
+                            Graduation Day is coming!
+                        </div>
+                        <div class="subtitle">
+                            Got your graduation gift ready? Ship with Courier.PO<br/> Let us help you get your surprise, right on <strong>time</strong>.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tile is-parent">
+                    <div class="tile is-child box postal-idea postal-idea-image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section info">
+        <div id="postal-header-banner" class="container">
+            <div class="title">
+                We take pride as Couriers
+            </div>
+            <div class="subtitle">
+                Our Courier.PO system lets us do amazing things, and that includes getting your package delivered reliably.
+            </div>
+        </div>
+    </section>
+
+    
+    <section class="section postal-support-ribbon">
+        <div class="container">
+            <div class="tile is-ancestor">
+                    <div class="tile is-parent">
+                        <article class="tile is-child box postal-support-ribbon">
+                        <p class="title">Ship</p>
+                        <p class="subtitle">Courier.PO makes shipping easy. We will pick up the packages from your home
+and drop them off fast! Ship with us and we will get the job done right!</p>
+                        </article>
+                    </div>
+                    <div class="tile is-parent">
+                        <article class="tile is-child box postal-support-ribbon">
+                        <p class="title">Track</p>
+                        <p class="subtitle">Tracking can be accomplished in a couple of ways. Customers can view all their sent packages
+when they log in and can track using the tracking number as well. </p>
+                        </article>
+                    </div>
+                    <div class="tile is-parent">
+                        <article class="tile is-child box postal-support-ribbon">
+                        <p class="title">Enjoy</p>
+                        <p class="subtitle">With the holidays right on the corner, you can finally rest easy! Get your gifts to your family on time! </p>
+                        </article>
+                    </div>
+                    </div>
+</div>
+    </section>
+
 
 {% endblock %}  
