--- a/templates/employee/apply.html.twig
+++ b/templates/employee/apply.html.twig
@@ -60,5 +60,6 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
     <script src="{{ asset('js/deliver.js') }}"></script>
 {% endblock %}
