Added feedback for every registration and signup;

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -243,7 +243,7 @@ section.info .information-list div.title {
 }
 
 
-.postal-header-banner div, #postal-header-banner div{
+.postal-header-banner div, #postal-header-banner div, .postal-registration-feedback div{
     text-align: center;
 }
 
