--- a/templates/employee/apply.html.twig
+++ b/templates/employee/apply.html.twig
@@ -51,7 +51,7 @@
                 Your Employee ID is: {{employee_id}}
             </section>
             <footer class="modal-card-foot">
-            <button class="button is-dark" onclick="modal2();">Login</button>
+            <a href="{{path('app-employee')}}" class="button is-dark" onclick="modal2();">Login</a>
             </footer>
         </div>
         </div>
