--- a/templates/employee_layout.html.twig
+++ b/templates/employee_layout.html.twig
@@ -18,10 +18,6 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="{{ path('app-employee-office') }}">
-        My Office
-      </a>
-
       <a class="navbar-item" href="{{ path('app-employee-manage-office') }}">
         Manage Office
       </a>
@@ -53,8 +49,8 @@
 
 
 
-      <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link button is-primary">
+      <div class="navbar-item">
+          <a class="button is-primary">
           <strong>
             {% if name is defined %}
 
@@ -67,22 +63,6 @@
             {% endif %}
           </strong>
           </a>
-
-
-        <div class="navbar-dropdown">
-          <div class="dropdown-content">
-          <a class="navbar-item" href="{{ path('app-employee-profile') }}">
-            Account
-          </a>
-          <a class="navbar-item">
-            Messages
-          </a>
-          <a class="navbar-item">
-            Settings
-          </a>
-          </div>
-        </div>
-        </div>
         
           {{ form(logout) }}
 
