Vehicles removed from listing if being used;

--- a/templates/employee/manage.html.twig
+++ b/templates/employee/manage.html.twig
@@ -87,7 +87,7 @@
 
                                 <article class="message is-warning">
                                     <div class="message-header">
-                                        <p>You currently have no packages to deliver.</p>
+                                        <p>There are currently no packages to deliver.</p>
                                     </div>
                                 </article>
 
