--- a/templates/employee_layout.html.twig
+++ b/templates/employee_layout.html.twig
@@ -30,6 +30,9 @@
         </a>
 
         <div class="navbar-dropdown">
+          <a class="navbar-item" href="{{ path('app-employee-office-vehicles')}}">
+            View Office Vehicles
+          </a>
           <a class="navbar-item" href="{{ path('app-employee-reports')}}">
             View CourierPO Reports
           </a>
